<resources>
    <string name="app_name">TCI RV</string>
    <string name="action_settings">Settings</string>
    <string name="huerta">Huerta</string>
    <string name="productor">Productor</string>
    <string name="tel_fono">Teléfono productor</string>
    <string name="toneladas_aprox">Toneladas aprox.</string>
    <string name="calibres">CALIBRES</string>
    <string name="_32">32</string>
    <string name="_36">36</string>
    <string name="_40">40</string>
    <string name="_48">48</string>
    <string name="_60">60</string>
    <string name="_70">70</string>
    <string name="_84">84</string>
    <string name="_96">96</string>
    <string name="can">CAN</string>
    <string name="lac">LAC</string>
    <string name="da_os_de_la_fruta">DAÑOS DE LA FRUTA</string>
    <string name="ro_a">ROÑA</string>
    <string name="rosado">ROSADO</string>
    <string name="ba_o">BAÑO</string>
    <string name="trips">TRIPS</string>
    <string name="quemado">QUEMADO</string>
    <string name="comedor">COMEDOR</string>
    <string name="viruela">VIRUELA</string>
    <string name="varicela">VARICELA</string>
    <string name="guardar">Guardar</string>
    <string name="help">Para agregar un nuevo registro a una actividad solo da un toque a la actividad. \n\nSi quieres modificar un registro de alguna actividad deja presionado la actividad y se abriran en forma de lista las actividades guardadas.</string>

    <string-array name="municipios">
        <item>SELEC. MUNICIPIO</item>
        <item>ACUITZIO</item>
        <item>APATZINGAN</item>
        <item>ARIO DE ROSALES</item>
        <item>CHARAPAN</item>
        <item>COTIJA DE LA PAZ</item>
        <item>ERONGARICUARO</item>
        <item>HIDALGO</item>
        <item>HUIRAMBA</item>
        <item>IRIMBO</item>
        <item>JIMENEZ</item>
        <item>LOS REYES</item>
        <item>MADERO</item>
        <item>NUEVO PARANGARICUTIRO</item>
        <item>PARACUARO</item>
        <item>PATZCUARO</item>
        <item>PERIBAN DE RAMOS</item>
        <item>PUREPERO</item>
        <item>QUIROGA</item>
        <item>SALVADOR ESCALANTE</item>
        <item>TACAMBARO</item>
        <item>TANCITARO</item>
        <item>TANGAMANDAPIO</item>
        <item>TANGANCICUARO</item>
        <item>TARETAN</item>
        <item>TINGAMBATO</item>
        <item>TINGUINDIN</item>
        <item>TLAZAZALCA</item>
        <item>TOCUMBO</item>
        <item>TURICATO</item>
        <item>TUXPAN</item>
        <item>URUAPAN</item>
        <item>ZACAPU</item>
        <item>ZIRACUARETIRO</item>
    </string-array>

    <string name="title_activity_register">register</string>
    <string name="title_activity_lista_actividades">ListaActividades</string>

    <string-array name="bitacora">
        <item>SELEC. OPCIÓN</item>
        <item>FOTOGRAFIA</item>
    </string-array>

    <string-array name="tipoBanda">
        <item>SELEC. OPCIÓN</item>
        <item>EXPORTACION</item>
        <item>NACIONAL</item>
        <item>ORGANICO</item>
    </string-array>

    <string-array name="floracion">
        <item>SELEC. OPCIÓN</item>
        <item>LOCA</item>
        <item>MENDEZ</item>
        <item>TEMPORAL</item>
    </string-array>

    <string-array name="comedor">
        <item>SELEC. OPCIÓN</item>
        <item>SI</item>
        <item>NO</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actividad_no_programada">actividad \n no programada</string>
    <string name="version">V 1.1.16</string>
    <string name="contacto">Contacto</string>
    <string name="telefono_contacto">Teléfono contacto</string>
    <string name="ayuda">ayuda</string>
    <string name="superficie">Superficie</string>
</resources>
