<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtHuerta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/huerta"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtProductor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productor"
                    android:inputType="textCapCharacters" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel_fono"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtToneladas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/toneladas_aprox"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spnMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/municipios" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calibres"
                android:textColor="#000"
                android:textIsSelectable="false" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/gridCalibre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="3"
                tools:columnCount="3">

                <EditText
                    android:id="@+id/txtCal32"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_32"
                    android:inputType="textPersonName"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/txtCal36"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_36"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCal40"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_40"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCal48"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_48"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCal60"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_60"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCal70"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_70"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCal84"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_84"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCal96"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/_96"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCalCAN"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/can"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtCalLAC"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/lac"
                    android:inputType="number" />

            </android.support.v7.widget.GridLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/da_os_de_la_fruta"
                android:textColor="#000" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/gridDano"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:columnCount="3">

                <EditText
                    android:id="@+id/txtDanoRona"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/ro_a"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDanoRosado"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/rosado"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDanoBano"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/ba_o"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDanoTrips"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/trips"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDanoQuemado"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/quemado"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDanoComedor"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/comedor"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDanoViruela"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/viruela"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txtDanoVaricela"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/varicela"
                    android:inputType="textPersonName" />

            </android.support.v7.widget.GridLayout>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>