<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".register"
    tools:showIn="@layout/activity_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtTelefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/boxtext1"
                            android:hint="@string/tel_fono"
                            android:inputType="phone"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtHuerta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/boxtext1"
                            android:hint="@string/huerta"
                            android:inputType="textCapSentences"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtProductor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/boxtext1"
                            android:hint="@string/productor"
                            android:inputType="textCapCharacters"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtToneladas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/boxtext1"
                            android:hint="@string/toneladas_aprox"
                            android:inputType="numberDecimal"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/spnMunicipio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:entries="@array/municipios" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/calibres"
                android:textColor="#6DBEF3"
                android:textIsSelectable="false" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.GridLayout
                    android:id="@+id/gridCalibre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    app:columnCount="3"
                    tools:columnCount="3">

                    <EditText
                        android:id="@+id/txtCal32"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:autofillHints=""
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_32"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCal36"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_36"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCal40"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_40"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCal48"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_48"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCal60"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_60"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCal70"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_70"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCal84"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_84"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCal96"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/_96"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCalCAN"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/can"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/txtCalLAC"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="@drawable/boxtext1"
                        android:ems="10"
                        android:hint="@string/lac"
                        android:inputType="number"
                        android:maxWidth="110dp"
                        android:paddingLeft="8dp"
                        android:textSize="12sp" />

                </android.support.v7.widget.GridLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/layout_danos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/da_os_de_la_fruta"
                    android:textColor="#6DBEF3" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true">

                    <android.support.v7.widget.GridLayout
                        android:id="@+id/gridDano"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:visibility="visible"
                        app:columnCount="3">

                        <EditText
                            android:id="@+id/txtDanoRona"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/ro_a"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/txtDanoRosado"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/rosado"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/txtDanoBano"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/ba_o"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/txtDanoTrips"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/trips"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/txtDanoQuemado"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/quemado"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/txtDanoComedor"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/comedor"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/txtDanoViruela"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/viruela"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/txtDanoVaricela"
                            android:layout_width="105dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@drawable/boxtext1"
                            android:ems="10"
                            android:hint="@string/varicela"
                            android:inputType="number"
                            android:maxWidth="110dp"
                            android:paddingLeft="8dp"
                            android:textSize="12sp" />

                    </android.support.v7.widget.GridLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>